# llama.cpp

common/: chat-parser.h  chat.cpp
ggml/src/ggml-cuda/: vecdotq.cuh
gguf-py/: pyproject.toml
tests/: test-chat.cpp
tools/server/: server.cpp
