[project]
name = "gguf"
version = "0.17.1"
description = "Read and write ML models in GGUF for GGML"
authors = [{ name = "GGML", email = "ggml@ggml.ai" }]
requires-python = ">=3.8"
readme = "README.md"
keywords = [
    "ggml",
    "gguf",
    "llama.cpp",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.17",
    "tqdm>=4.27",
    "pyyaml>=5.1",
    "sentencepiece>=0.1.98,<=0.2.0",
    "pyside6>=6.6.3.1",
]

[project.optional-dependencies]
gui = ["PySide6~=6.9 ; python_version >= '3.9' and python_version < '3.14'"]

[project.urls]
Homepage = "https://ggml.ai"
Repository = "https://github.com/ggml-org/llama.cpp"

[project.scripts]
gguf-convert-endian = "gguf.scripts.gguf_convert_endian:main"
gguf-dump = "gguf.scripts.gguf_dump:main"
gguf-set-metadata = "gguf.scripts.gguf_set_metadata:main"
gguf-new-metadata = "gguf.scripts.gguf_new_metadata:main"
gguf-editor-gui = "gguf.scripts.gguf_editor_gui:main"

[dependency-groups]
dev = ["pytest~=5.2"]

[tool.hatch.build.targets.sdist]
include = [
    "gguf",
    "gguf/py.typed",
]

[tool.hatch.build.targets.wheel]
include = [
    "gguf",
    "gguf/py.typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
